--- a/pages/membre.html
+++ b/pages/membre.html
@@ -50,62 +50,54 @@
         </div>
     </div>
 
-    <div class="scroll s-three" data-section-name="s-three">
-        <div class="container">
-            <div class="row">
-                <div class="visuel-projet" id="visuel">
-                    <div class="notre-equipe" id="membre-equipe">
-                        <div class="equipe-wrapper">
-                            <div>
-                                <h1><span class="span-effect">N</span>otre <span class="span-effect">É</span>quipe
-                                </h1>
-                                <div class="effet" style="width: 50%;"></div>
-                                <p>"Ascenta Concept, que la vitesse monte en flèche"</p>
-                            </div>
-                            <div class="membre">
-                                <div>
-                                    <div class="membre-info">
-                                        <h3><span class="span-effect">A</span>dam <span class="span-effect">R</span>obin
-                                        </h3>
-                                        <p>Chargé de communication</p>
-                                    </div>
+    <div class="notre-equipe">
+        <div class="equipe-wrapper">
+            <div>
+                <h1><span class="span-effect">N</span>otre <span class="span-effect">É</span>quipe
+                </h1>
+                <div class="effet" style="width: 50%;"></div>
+                <p>"Ascenta Concept, que la vitesse monte en flèche"</p>
+            </div>
+            <div class="membre">
+                <div>
+                    <div class="membre-info">
+                        <h3><span class="span-effect">A</span>dam <span class="span-effect">R</span>obin
+                        </h3>
+                        <p>Chargé de communication</p>
+                    </div>
 
-                                    <div class="photo-membre"
-                                        style="background-image: url(./../assets/images/IMG_20231126_221353_802.jpg);">
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="membre-info">
-                                        <h3><span class="span-effect">E</span>nzo
-                                            <span class="span-effect">C</span>orbet</h3>
-                                        <p>Concepteur 3D</p>
-                                    </div>
-                                    <div class="photo-membre"
-                                        style="background-image: url(./../assets/images/IMG_20231126_221359_570.jpg); ">
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="membre-info">
-                                        <h3><span class="span-effect">N</span>oa <span class="span-effect">L</span>asseu
-                                        </h3>
-                                        <p>Designer</p>
-                                    </div>
-                                    <div class="photo-membre"
-                                        style="background-image: url(./../assets/images/IMG_20231126_221347_397.jpg);">
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="membre-info">
-                                        <h3><span class="span-effect">Y</span>oni <span
-                                                class="span-effect">G</span>iraudet</h3>
-                                        <p>assistant général</p>
-                                    </div>
-                                    <div class="photo-membre"
-                                        style="background-image: url(./../assets/images/IMG_20231126_221351_104.jpg);">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="photo-membre"
+                        style="background-image: url(./../assets/images/IMG_20231126_221353_802.jpg);">
+                    </div>
+                </div>
+                <div>
+                    <div class="membre-info">
+                        <h3><span class="span-effect">E</span>nzo
+                            <span class="span-effect">C</span>orbet</h3>
+                        <p>Concepteur 3D</p>
+                    </div>
+                    <div class="photo-membre"
+                        style="background-image: url(./../assets/images/IMG_20231126_221359_570.jpg); ">
+                    </div>
+                </div>
+                <div>
+                    <div class="membre-info">
+                        <h3><span class="span-effect">N</span>oa <span class="span-effect">L</span>asseu
+                        </h3>
+                        <p>Designer</p>
+                    </div>
+                    <div class="photo-membre"
+                        style="background-image: url(./../assets/images/IMG_20231126_221347_397.jpg);">
+                    </div>
+                </div>
+                <div>
+                    <div class="membre-info">
+                        <h3><span class="span-effect">Y</span>oni <span
+                                class="span-effect">G</span>iraudet</h3>
+                        <p>assistant général</p>
+                    </div>
+                    <div class="photo-membre"
+                        style="background-image: url(./../assets/images/IMG_20231126_221351_104.jpg);">
                     </div>
                 </div>
             </div>
