--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="./index.html#a-propos">à propos</a>
                     <a href="./index.html#visuel">Visuels</a>
                     <a href="./pages/membre.html">Équipe</a>
-                    <a href="./index.html#infos-footer">Contact</a>
+                    <a href="./index.html#mentions-legales">Contact</a>
                 </nav>
             </div>
         </div>
@@ -49,7 +49,7 @@
                 <a href="./index.html#a-propos">à propos</a>
                 <a href="./index.html#visuel">Visuels</a>
                 <a href="./pages/membre.html">Équipe</a>
-                <a href="./index.html#infos-footer">Contact</a>
+                <a href="./index.html#mentions-legales">Contact</a>
             </nav>
         </div>
     </div>
@@ -97,7 +97,6 @@
             <div class="container">
                 <div class="row">
                     <div class="projet" id="a-propos">
-
                         <div class="section-gauche">
                             <div>
 
@@ -154,45 +153,41 @@
                             </div>
                             <a href="#" class="button">Découvrir</a>
                         </div>
-
-                        <!--    TO-DO : Do the css of this section. PS : Check FIGMA.-->
-                        <div class="notre-equipe" id="membre-equipe">
-                            <div class="equipe-wrapper">
-                                <div>
-                                    <h1><span class="span-effect">N</span>otre <span class="span-effect">É</span>quipe
-                                    </h1>
-                                    <div class="effet" style="width: 50%;"></div>
-                                    <p>"Ascenta Concept, que la vitesse monte en flèche"</p>
-                                </div>
-                                <div class="membre">
-                                    <img src="./assets/images/IMG_20231126_221444_519.jpg" alt="Notre Equipe !" style="display: inline-block; width: 50%;">
-                                    <p style="    display: inline-block;
-                                    width: 50%;
-                                    overflow-wrap: break-word;
-                                    font-size: large;
-                                    padding: 20px;
-                                    text-align: left;">Bienvenue chez Ascenta Concept, une écurie scolaire passionnée par l’innovation,
-                                        l’éducation STEM et la compétition F1 in School.
-
-                                        Nous vous invitons à rejoindre notre aventure éducative excitante et à devenir
-                                        un
-                                        partenaire clé de notre succès.
-
-                                        Ascenta concept est une écurie de Formule 1 miniaturisée participante au
-                                        concours F1 In
-                                        School.
-
-                                        Notre écurie est composée d'étudiants passionnées qui veulent par la suite se
-                                        faire une
-                                        identité ainsi qu'un réseau dans ce monde du sport automobile.
-                                    </p>
-                                </div>
-                                <a href="./pages/membre.html" class="button">En savoir plus</a>
+                    </div>
+                    <div class="notre-equipe" style="height: 70vh;">
+                        <div class="equipe-wrapper">
+                            <div>
+                                <h1><span class="span-effect">N</span>otre <span class="span-effect">É</span>quipe
+                                </h1>
+                                <div class="effet" style="width: 50%;"></div>
+                                <p>"Ascenta Concept, que la vitesse monte en flèche"</p>
                             </div>
+                            <div class="membre" style="justify-content: center; align-items: flex-start; margin: 20px 0;">
+                                <img src="./assets/images/IMG_20231126_221444_519.jpg" alt="Notre Equipe !"style="display: inline-block; width: 31.25rem; border-radius: 22px;margin-right: 30px;">
+                                <p style="display: inline-block; width: 35%; overflow-wrap: break-word; font-size: large; padding: 20px; text-align: left; height: 100%; white-space: pre-line;">
+                                    Bienvenue chez Ascenta Concept, une écurie scolaire passionnée
+                                    par l’innovation,
+                                    l’éducation STEM et la compétition F1 in School.
+
+                                    Nous vous invitons à rejoindre notre aventure éducative excitante et à devenir
+                                    un
+                                    partenaire clé de notre succès.
+
+                                    Ascenta concept est une écurie de Formule 1 miniaturisée participante au
+                                    concours F1 In
+                                    School.
+
+                                    Notre écurie est composée d'étudiants passionnées qui veulent par la suite se
+                                    faire une
+                                    identité ainsi qu'un réseau dans ce monde du sport automobile.
+                                </p>
+                            </div>
+                            <a href="./pages/membre.html" class="button">En savoir plus</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer id="infos-footer">
@@ -231,11 +226,10 @@
                             72100 Mans</p>
                     </div>
                 </div>
-
             </div>
         </div>
 
-        <div class="mentions-legales">
+        <div id="mentions-legales">
             <div>
                 Mentions légales</div>
             <div>
