--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
+<!--                            TO-DO LIST                          -->
+<!--    Download low videos quality for mobile devices              -->
+<!--    Update member section CSS to mobile devices                 -->
+<!--    Fixe scrolling to footer problems in all devices            -->
 
 <body>
     <div id="intro">
@@ -55,7 +59,6 @@
     </div>
 
     <main>
-        <!--    TO-DO : Download low videos quality for mobile devices  -->
         <div class="scroll s-one" data-section-name="s-one">
             <div class="container">
                 <div class="row">
@@ -91,7 +94,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="scroll s-two" data-section-name="s-two">
             <div class="container">
