--- a/pages/membre.html
+++ b/pages/membre.html
@@ -144,7 +144,7 @@
             </div>
         </div>
 
-        <div class="mentions-legales">
+        <div id="mentions-legales">
             <div>
                 Mentions légales</div>
             <div>
