--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         rel="stylesheet">
 </head>
 <!--                            TO-DO LIST                          -->
-<!--    Update member section CSS to mobile devices                 -->
-<!--    Fixe scrolling to footer problems in all devices            -->
+<!--    Fixe scrolling to footer problems in all devices : Mayby done ?            -->
 
 <body>
     <div id="intro">
