--- a/pages/membre.html
+++ b/pages/membre.html
@@ -18,6 +18,11 @@
         rel="stylesheet">
 </head>
 
+<!--                            TO-DO LIST                          -->
+<!--            Add new elements and informations                   -->
+<!-- Remplace empty images by real F1 images made by Ascenta staff  -->
+<!--             Add descriptions of the team                       -->
+
 <body>
     <header class="global-header">
         <div id="header-wrapper">
